Font Awesome 5 to 5.6 update, and Demo Site Updates